# companyos

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
apps/api/: .dockerignore  .env.example  .gitignore  CONVENTIONS.md  Dockerfile  Makefile  README.md  SELF-HOSTING.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 08fb88b650b4_meeting_recipes.py  0bab5058af5a_meeting_shares.py  18430ba19baf_project_artifacts.py  1fa178a681a1_meeting_summary_structured_lines.py  2f309db5116a_project_lead_target_date.py  2fe7f6560b46_batch1_status_duplicate_triage_flag_.py  62a14e0f61ff_notification_email_sent_at.py  658473ef81b7_automation_rules.py  704d7fb13c31_meeting_templates.py  78a136a8bd38_ai_user_budget.py  8ea888da7919_mcp_idempotency_keys.py  8fe22f2b47d3_add_vocabulary_terms.py  981ab3b2a8a6_add_events_calendar.py  a0b1c2d3e4f5_project_updates.py  a0b1c2d3e4f6_note_lifecycle.py  a1b2c3d4e5f6_mcp_multi_org_grants.py  a1c2e3f4b5d6_fix_project_network_case.py  a1c5e9b3d720_dashboard_visibility.py  a1d5f8c3e269_view_public_token.py  a2b3c4d5e6f8_cycle_lifecycle.py  a3b4c5d6e7f8_task_approvals.py  a3f7c1e9b562_air_gapped.py  a3f7c91d2e84_module_archived_at.py  a4b5c6d7e8f9_project_features.py  a4e8c1b7d293_transition_conditions.py  a4e8c2d7f539_org_plan.py  a58ad0c1c190_workflow_statuses.py  (+120 more)
apps/api/ops/: companyos_config.py  companyos_ops.py
apps/api/scripts/: seed.py
apps/api/sdk/: README.md
apps/api/tests/: __init__.py  conftest.py  helpers.py  test_activity.py  test_activity_grace.py  test_activity_stream.py  test_ai.py  test_ai_auto_run.py  test_ai_build_actions.py  test_ai_chart.py  test_ai_chat.py  test_ai_chat_files.py  test_ai_chat_management.py  test_ai_chat_mentions.py  test_ai_estimate.py  test_ai_insight.py  test_ai_outputs.py  test_ai_transform.py  test_ai_trust.py  test_ai_usage.py  test_air_gapped.py  test_analytics.py  test_approvals.py  test_artifacts_calendar.py  test_audit.py  test_auth.py  test_auth_providers.py  test_auto_shift.py  test_automation.py  test_batch6_cluster.py  test_bot_users.py  test_catch_up.py  test_catchup_actions.py  test_changelog.py  test_chapters_brief.py  test_coediting.py  test_comment_attachments.py  test_comment_visibility.py  test_comments.py  test_compliance.py  (+137 more)
(+848 files in other folders)
