[project]
name = "companyos-api"
version = "1.0.0"
description = "CompanyOS API, an agent-native work platform (Jira for your agents)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "email-validator>=2.2",
    "loguru>=0.7",
    "argon2-cffi>=23.1",
    "pyjwt>=2.10",
    "httpx>=0.28,<0.29",
    "cryptography>=44.0",
    "uuid-utils>=0.10",
    "fastmcp>=2",
    "slowapi>=0.1.10",
    "ldap3>=2.9",
    "typer>=0.26.7",
    "boto3>=1.43.36",
    "pycrdt>=0.14.1",
    "pycrdt-websocket>=0.16.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/companyos"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "ASYNC", "S", "B", "A", "C4", "DTZ",
    "EM", "ISC", "G", "PIE", "T20", "PT", "Q", "RET", "SIM", "TID",
    "ARG", "PTH", "PL", "TRY", "PERF", "RUF",
]
ignore = [
    "ISC001",
    "EM101",
    "EM102",
    "TRY003",
    "TRY300",
    "PLR0913",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["companyos"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S107", "PLR2004", "ARG001", "ARG002", "ARG005"]
"tests/conftest.py" = ["E402"]
"scripts/**" = ["S105", "S106"]
"alembic/**" = ["E402", "PLR0915"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["companyos"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[[tool.mypy.overrides]]
module = ["uuid_utils.*", "asyncpg.*", "slowapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = ["error::RuntimeWarning"]
